[gd_scene load_steps=3 format=3]

[node name="Main" type="Node"]
[node name="NetworkManager" type="Node" parent="."]
groups = ["network_manager"]
[node name="SceneManager" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3

[node name="Panel" type="Panel" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -140.0
offset_right = 220.0
offset_bottom = 140.0

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/UI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0

[node name="Title" type="Label" parent="CanvasLayer/UI/Panel/VBox"]
text = "Tony â€” Lokaler Start"
horizontal_alignment = 1

[node name="HBox_Host" type="HBoxContainer" parent="CanvasLayer/UI/Panel/VBox"]
[node name="HostLabel" type="Label" parent="CanvasLayer/UI/Panel/VBox/HBox_Host"]
text = "Host/IP:"
[node name="Host" type="LineEdit" parent="CanvasLayer/UI/Panel/VBox/HBox_Host"]
size_flags_horizontal = 3
placeholder_text = "127.0.0.1"

[node name="HBox_Port" type="HBoxContainer" parent="CanvasLayer/UI/Panel/VBox"]
[node name="PortLabel" type="Label" parent="CanvasLayer/UI/Panel/VBox/HBox_Port"]
text = "Port:"
[node name="Port" type="LineEdit" parent="CanvasLayer/UI/Panel/VBox/HBox_Port"]
size_flags_horizontal = 3
placeholder_text = "24565"
text = "24565"
caret_blink = true

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/UI/Panel/VBox"]
[node name="BtnHost" type="Button" parent="CanvasLayer/UI/Panel/VBox/Buttons"]
text = "Server hosten"
[node name="BtnClient" type="Button" parent="CanvasLayer/UI/Panel/VBox/Buttons"]
text = "Als Client verbinden"

[node name="Status" type="Label" parent="CanvasLayer/UI/Panel/VBox"]
text = "Bereit."

[ext_resource type="Script" path="res://scripts/net/NetworkManager.gd" id="1"]
[ext_resource type="Script" path="res://scripts/ui/StartUI.gd" id="2"]

[node name="StartUI" type="Node" parent="CanvasLayer/UI"]
script = ExtResource("2")

[node name="NetworkManagerScript" type="Node" parent="NetworkManager"]
script = ExtResource("1")